# oxi-hole

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  README.md  build.rs  config.toml  rust_out  version.txt
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 0b29b9eb-3d97-4cc5-95e3-62dee3459355.json  29484231-3ddc-4feb-b92d-9b310d8a664f.json  f14f166a-a06a-4096-aa89-0c8bc26a1201.json
.omc/state/: agent-replay-4e0879b6-bbf5-4b3c-9be8-f96c8c0935a4.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  mission-state.json
.omc/state/sessions/4e0879b6-bbf5-4b3c-9be8-f96c8c0935a4/: autopilot-state.json
.superpowers/brainstorm/15585-1774938087/content/: wizard-mockup.html
.superpowers/brainstorm/15585-1774938087/state/: server-stopped
docs/superpowers/plans/: 2026-03-29-cross-platform-compatibility.md  2026-03-30-blocklist-manual-refresh.md  2026-03-31-encrypted-dns-cert-upload.md  2026-03-31-persistent-stats.md  2026-03-31-prerelease-support.md  2026-03-31-privileged-reconfigure.md  2026-03-31-security-hardening.md  2026-03-31-setup-wizard.md  2026-03-31-standalone-uninstall-script.md  2026-04-02-cache-flush-on-settings-change.md  2026-04-10-certificate-management.md
docs/superpowers/specs/: 2026-03-29-ipv6-support-design.md  2026-03-31-encrypted-dns-cert-upload-design.md  2026-03-31-persistent-stats-design.md  2026-03-31-prerelease-support-design.md  2026-03-31-privileged-reconfigure-design.md  2026-03-31-security-hardening-design.md  2026-03-31-setup-wizard-design.md  2026-03-31-standalone-uninstall-script-design.md  2026-04-02-cache-flush-on-settings-change-design.md  2026-04-10-certificate-management-design.md  2026-04-10-https-enforcement-design.md
scripts/: install.sh  uninstall.sh
src/: blocklist.rs  cert_parser.rs  config.rs  features.rs  main.rs  persistent_stats.rs  query_log.rs  reconfigure.rs  resources.rs  stats.rs  tls.rs  update.rs
src/acme/: providers.rs
src/auth/: db.rs  middleware.rs  mod.rs  models.rs
src/dns/: handler.rs  listener_doh.rs  listener_doq.rs  listener_dot.rs  listener_tcp.rs  listener_udp.rs  mod.rs  upstream.rs
src/web/: dashboard.html  login.html  mod.rs  setup.html
