[package]
name = "oxi-hole"
version = "0.1.1"
edition = "2021"
description = "An AdGuardHome-style DNS sinkhole server written in Rust with DoT, DoH, and DoQ support"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
futures = "0.3"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# QUIC (DNS-over-QUIC)
quinn = "0.11"

# DoH support
base64 = "0.22"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower-service = "0.3"
webpki-roots = "1"
