[package]
name = "oxi-dns"
version = "0.5.51"
edition = "2021"
description = "An AdGuardHome-style DNS sinkhole server written in Rust with DoT, DoH, and DoQ support"
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
futures = "0.3"
flate2 = "1"
tar = "0.4"
# SO_REUSEPORT for zero-downtime restarts
socket2 = { version = "0.5", features = ["all"] }
get_if_addrs = "0.5.3"
sysinfo = { version = "0.30", default-features = false }

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
instant-acme = "0.8"

# QUIC (DNS-over-QUIC)
quinn = "0.11"

# DoH support
base64 = "0.22"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower-service = "0.3"
webpki-roots = "1"
rand = "0.9"
async-stream = "0.3.6"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
x509-parser = "0.16"
p12 = "0.6"
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
